--- a/trafie/en.lproj/Localizable.strings
+++ b/trafie/en.lproj/Localizable.strings
@@ -46,7 +46,7 @@ decathlon             = "Decathlon";
 /*
  * Countries
  */
-af = "Aghanistan";
+af = "Afghanistan";
 ax = "Aland Islands";
 al = "Albania";
 dz = "Algeria";
